# socket

./: .quickdocs.yml  .template.yml  Makefile  README.md  setup.cfg
docs/: conf.py  index.rst
src/: dns.cpp  main.cpp  socket.cpp  stream.cpp
src/headers/: dns.hpp  socket.hpp  stream.hpp
