[metadata]
name = socket
version = 0.1.0

description = TCP socket
url = https://github.com/JoelLefkowitz/socket

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
project_type = Miscellaneous
status = In development
homepage = https://socket.readthedocs.io

languages =
    C++

paradigms = 
    Object oriented programming
